--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -12,6 +12,8 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    if: "contains(github.event.commits[0].message, '[build back-end]')"
+
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 11
