refactor: remove if [build back-end]

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -12,7 +12,7 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    if: "contains(github.event.commits[0].message, '[build back-end]')"
+#    if: "contains(github.event.commits[0].message, '[build back-end]')"
 
     steps:
     - uses: actions/checkout@v2
