--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,12 +7,14 @@ on:
   pull_request:
     branches: [ development ]
 
-jobs:
-  build:
+  workflow_dispatch:
 
+jobs:
+  build_test:
+    name: Build & Test app
     runs-on: ubuntu-latest
 
-#    if: "contains(github.event.commits[0].message, '[build back-end]')"
+    if: "contains(github.event.commits[0].message, '[build back-end]')"
 
     steps:
     - uses: actions/checkout@v2
