--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -57,13 +57,33 @@ jobs:
           context: ./
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/express-demo:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/rest-api:latest
 
       - name: Run the image in a container
         uses: addnab/docker-run-action@v3
         with:
-          image: ${{ secrets.DOCKERHUB_USERNAME }}/express-demo:latest
+          image: ${{ secrets.DOCKERHUB_USERNAME }}/rest-api:latest
           run: |
             echo "runing the docker image"
             echo "Testing the nodejs  app endpoints"
             echo ${{ steps.docker_build.outputs.digest }}
+
+  deploy_to_Heroku:
+    name: Deploy to Heroku
+    runs-on: ubuntu-latest
+    # only run this after deploying to docker
+    needs: [ push_to_DockerHub ]
+    steps:
+      - name: checkout repo
+        uses: actions/checkout@v2
+      # more info on deploy to Heroku:
+      # https://github.com/marketplace/actions/deploy-to-heroku
+      - name: deploy to Heroku
+        uses: akhileshns/heroku-deploy@v3.12.12
+        with:
+          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+          heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
+          heroku_email: ${{ secrets.HEROKU_EMAIL }}
+          # build the app docker image using the Dockerfile
+          # and run that image in a container that's pushed to Heroku
+          usedocker: true
